# Elucidated-Diffusion-Model-vibe-coded

./: .gitignore  LICENSE.md  README.md  SR3-simple.ipynb  SR3-vit.ipynb  SR3-with-cross-attention.ipynb  chat_history_summary.md  claude_diffusion_attempt.ipynb  color_attempt.ipynb  diffusion_model_demo.ipynb  preprocess_datasets.ipynb  pyproject.toml
notebooks/: standalone_edm_vs_ddpm_diffusion_model_demo.ipynb
outputs/: fantasy_2025-09-12_13-14-42.html
pages/: index.html
src/elucidated_diffusion/: checkpoint_helper.py  dataset_helpers.py  elucidated_diffusion.py  ema_helper.py  image_helpers.py
src/elucidated_diffusion/models/: chatgpt_diffusion_unet.py  chatgpt_sr_unet.py  claude_diffusion_ViTEnhancedUNet64.py  claude_diffusion_ViTGradualTransition.py  claude_sr_ViT.py  deepseek_sr_ViT.py  frequency_domain_loss_for_edm.py
tests/: test_ema_helper.py
