[project]
name = "Elucidated-Diffusion-Model-vibe-coded"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'torch','torchvision',
    'tqdm','matplotlib','Pillow',
    'opencv-contrib-python','opencv-python',
    'torchview','objgraph'
]
